oai-cn5g compliant with iPhone and Quectel devices

--- a/conf/oai-spgwu-tiny.conf
+++ b/conf/oai-spgwu-tiny.conf
@@ -131,6 +131,7 @@ SPGW-U =
        # Additional info to be sent to NRF for supporting Network Slicing 
        UPF_INFO = (
           { NSSAI_SST = 1; NSSAI_SD = "0xFFFFFF";  DNN_LIST = ({DNN = "oai";}); },
+          { NSSAI_SST = 1; NSSAI_SD = "0xFFFFFF";  DNN_LIST = ({DNN = "openairinterface";}); },
           { NSSAI_SST = 1; NSSAI_SD = "0xFFFFFF";  DNN_LIST = ({DNN = "ims";}); }
        );
     }
