--- a/conf/users.conf
+++ b/conf/users.conf
@@ -1,20 +1,27 @@
 [001010000000001]
-fullname = test1
+fullname = user1
 hassip = yes
 context = users
 host = dynamic
-transport=tcp
+transport=udp
 
 [001010000000002]
-fullname = test2
+fullname = user2
 hassip = yes
 context = users
 host = dynamic
-transport=tcp
+transport=udp
 
 [001010000000003]
-fullname = test3
+fullname = user3
 hassip = yes
 context = users
 host = dynamic
-transport=tcp
+transport=udp
+
+[001010000000004]
+fullname = user4
+hassip = yes
+context = users
+host = dynamic
+transport=udp
