--- a/conf/users.conf
+++ b/conf/users.conf
@@ -25,3 +25,198 @@ hassip = yes
 context = users
 host = dynamic
 transport=udp
+
+[001010000000005]
+fullname = user5
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000006]
+fullname = user6
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000007]
+fullname = user7
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000008]
+fullname = user8
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000009]
+fullname = user9
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000010]
+fullname = user10
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000011]
+fullname = user11
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000012]
+fullname = user12
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000013]
+fullname = user13
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000014]
+fullname = user14
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000015]
+fullname = user15
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000016]
+fullname = user16
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+[001010000000017]
+fullname = user17
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000018]
+fullname = user18
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000019]
+fullname = user19
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000020]
+fullname = user20
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000021]
+fullname = user21
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000022]
+fullname = user22
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000023]
+fullname = user23
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000024]
+fullname = user24
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000025]
+fullname = user25
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000026]
+fullname = user26
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000027]
+fullname = user27
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000028]
+fullname = user28
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000029]
+fullname = user29
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000030]
+fullname = user30
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000031]
+fullname = user31
+hassip = yes
+context = users
+host = dynamic
+transport=udp
+
+[001010000000032]
+fullname = user32
+hassip = yes
+context = users
+host = dynamic
+transport=udp
