--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -187,12 +187,12 @@ services:
         privileged: true
         init: true
         container_name: oai-ext-dn
-        image: oaisoftwarealliance/trf-gen-cn5g:latest
+        image: oaisoftwarealliance/trf-gen-cn5g:focal
         entrypoint: /bin/bash -c \
-              "ip route add 12.1.1.0/24 via 192.168.70.134 dev eth0; ip route; sleep infinity"
+              "ip route add 12.1.0.0/16 via 192.168.70.134 dev eth0; ip route; sleep infinity"
         command: ["/bin/bash", "-c", "trap : SIGTERM SIGINT; sleep infinity & wait"]
         healthcheck:
-            test: /bin/bash -c "ip r | grep 12.1.1"
+            test: /bin/bash -c "ip r | grep 12.1.0"
             interval: 10s
             timeout: 5s
             retries: 5
